Fixed Java 8 compilation issue